##----------------------------------------------------------------------------
##       $Id$
##
##       Makefile for the Token tests
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

## The number in AUTOMAKE_OPTIONS is the minimum required version automake
## needed to process this file.
AUTOMAKE_OPTIONS = 1.4

SUBDIRS = \
         collection  \
         deadlock  \
         invariant  \
         manual  \
         mutex  \
         rw_lock

